# goida-bot

./: .env  .env.local  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  indexed_count.sql  macos.docker-compose.yml  make_feeds.sql  pyproject.toml  settings-docker.yml
alembic/: env.py
alembic/versions/: 3fcf4f1328f2_added_published_field.py  5b13da32d8b5_added_chunks.py  b3bcb536b9ef_added_chunk_type.py  beb0951bad1d_add_article_entity.py  c7f9126f77dc_added_title_column.py  d082f563e1b4_init.py
asker/: __main__.py  settings.py
bot/: __main__.py  settings.py  utils.py
bot/routers/: search_router.py
common/: common_logging.py
common/dao/: __init__.py  articles_dao.py  feeds_dao.py
common/models/: articles.py
common/postgres/: entities.py  session.py  settings.py
common/services/: search_service.py
common/settings/: __init__.py  articles_settings.py  configured_settings.py  feeds_settings.py  pgpt_settings.py  postgres_settings.py  s3_settings.py  shared_settings.py  telegram_settings.py
common/storage/: __init__.py  articles_storage.py
common/tokenization/: tokens_distributor.py
docker/: fetcher.Dockerfile  indexer.Dockerfile  migrate.Dockerfile
fetcher/: __main__.py  settings.py
fetcher/articles/: __init__.py  articles_fetcher.py  articles_pipeline.py  articles_renderer.py
fetcher/feeds/: __init__.py  feed_parser.py  feeds_pipeline.py
fetcher/models/: feeds.py
indexer/: __main__.py  article_indexer.py  indexer_pipeline.py  settings.py
pgpt/: Dockerfile  settings-docker.yaml
scripts/: create-model.sh  pull-model.sh
(+17 files in other folders)
