[tool.poetry]
name = "goida-bot"
version = "0.1.0"
description = ""
authors = ["Dmitri Tsiu <dmitrimeowsalot@gmail.com>"]
readme = "README.md"
packages = [{include = "indexer"}]

[tool.poetry.dependencies]
python = "^3.11"
pgpt-python = "^0.1.2"
feedparser = "^6.0.11"
playwright = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
