[tool.poetry]
name = "goida-bot"
version = "0.1.0"
description = ""
authors = ["Dmitri Tsiu <dmitrimeowsalot@gmail.com>"]
readme = "README.md"
packages = [
    {include = "common"},
    {include = "indexer"},
    {include = "fetcher"}
]

[tool.poetry.dependencies]
python = "^3.11"
pgpt-python = "^0.1.2"
feedparser = "^6.0.11"
playwright = "^1.47.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
pylint = "^3.2.7"

[tool.pylint."MESSAGE CONTROL"]
disable = "C0114,C0115,C0116,R0903"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
